Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in
evolution
evolution
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 193
    • Issues 193
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 1
    • Merge Requests 1
  • CI / CD
    • CI / CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI / CD
    • Repository
    • Value Stream
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Members
    • Members
  • Collapse sidebar
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
  • GNOME
  • evolutionevolution
  • Issues
  • #1330

Closed
Open
Opened Jan 16, 2021 by Andre Klapper@aklapper💬Developer

Composer: Invalid wrapping with a space at the end of the line

webkit2gtk3-2.30.4-1.fc33.x86_64
evolution-3.38.3-1.fc33.x86_64
  1. Edit > Preferences > Composer Preferences > General > Default Behavior > Format messages in HTML is disabled
  2. Edit > Preferences > Composer Preferences > General > Default Behavior > Number of characters for word wrapping is 71
  3. Import email testcase: cursordownetc.mbox
  4. Open mail composer to reply (via Ctrl+R)
  5. Have your cursor at the very first position in the message body
  6. Press the arrow down key, keep it pressed, see if you make it to the end of the messagte

Expected behavior:

  • No non-existing empty lines rendered which did not exist either in the original message.
  • Can use arrow down key to go through entire document.

Actual behavior:

  • Unexpected empty lines in quote
  • Cursor get stuck at the end of the line before such empty lines when pressing arrow down (workaround: use arrow right once)

Screenshot: gl

Edited Jan 18, 2021 by Milan Crha
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
None
Milestone
None
Assign milestone
Time tracking
None
Due date
None
Reference: GNOME/evolution#1330