I#1330 - Composer: Invalid wrapping with a space at the end of the line

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/1330