src/e-util/test-html-editor-units-bugs.h
@@ -22,6 +22,7 @@
 #define BLOCKQUOTE_STYLE "style=\"margin:0 0 0 .8ex; border-left:2px #729fcf solid;padding-left:1ex\""
 #define QUOTE_SPAN(x) "<span class='-x-evo-quoted'>" x "</span>"
 #define QUOTE_CHR "<span class='-x-evo-quote-character'>&gt; </span>"
+#define WRAP_BR "<br class=\"-x-evo-wrap-br\">"
 
 G_BEGIN_DECLS
 
